Fixed scrollbar and capital accented character bug.
Fixed the scrollbar to look nicer and not always be visible. Fixed a bug where capital accented letters were never converted.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,3 +59,19 @@
 	color: #CCCCCC;
 	font-size: 12px;
 }
+
+#conv::-webkit-scrollbar-track
+{
+	
+}
+
+#conv::-webkit-scrollbar
+{
+	width:10px;
+}
+
+#conv::-webkit-scrollbar-thumb
+{
+	border-radius: 20px;
+	background-color: #444;
+}
